--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,17 @@ button:hover {
     background-color: transparent;
     border-radius: 4px;
     display: flex;
+    flex-direction: column;
+    gap: 2rem;
     justify-content: center;
     align-items: center;
+}
+
+#resultado {
+    color: #FFF;
+    font-size: 1.5rem;
+    background-color:rgba(255, 255, 255, 0.151); 
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin: 2rem;
 }
