--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,61 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat';
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
-
 button {
-    height: fit-content;
-    padding: 3rem;
-    color: #00000099;
-    background-color: rgba(255, 255, 255, 0.151);
-    border-style: initial;
-    border-radius: 0.5rem;
-    transition: 0.5s;
+  height: fit-content;
+  padding: 3rem;
+  color: #00000099;
+  background-color: rgba(255, 255, 255, 0.151);
+  border-style: initial;
+  border-radius: 0.5rem;
+  transition: 0.5s;
 }
 
 button:hover {
-    border-color: rgb(194, 194, 41);
-    color:#fff;
-    scale: 1.1;
-    
+  border-color: rgb(194, 194, 41);
+  color: #fff;
+  scale: 1.1;
 }
 
 .secao {
-    height: 100vh;
-    background-color: transparent;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  background-color: transparent;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
 }
 
 #resultado {
-    color: #00000099;
-    font-size: 1.5rem;
-    background-color: transparent; 
-    border-radius: 0.5rem;
-    padding: 1rem;
-    margin: 2rem;
-    transition: 0.5s;
+  color: #00000099;
+  font-size: 1.5rem;
+  background-color: transparent;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin: 2rem;
+  transition: 0.5s;
 }
 
 #resultado:hover {
-    color: #FFF;
+  color: #fff;
 }
